--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-    "token": "MTEwOTQ3NDQyMTcxNjAyOTYwMA.GLkdrS.3MGyhdajdRf6KNNp9dOzUKn_OqlhOwgt-iyuZQ"
+    "token": "MTEwOTQ3NDQyMTcxNjAyOTYwMA.GEw1H7.2Pw0Lutnvsj_d5cAnAW080Z8OsfrEnwQd4r8rE"
 }
