--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-    "token": "MTEwOTQ3NDQyMTcxNjAyOTYwMA.GEw1H7.2Pw0Lutnvsj_d5cAnAW080Z8OsfrEnwQd4r8rE"
+    "token": "MTEwOTQ3NDQyMTcxNjAyOTYwMA.GFkdL6.QbsH2c2VNBFI3s3G-wpdQu5qG-obqOLo-86b0s"
 }
