--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-    "token": "MTEwOTQ3NDQyMTcxNjAyOTYwMA.GFkdL6.QbsH2c2VNBFI3s3G-wpdQu5qG-obqOLo-86b0s"
+    "token": "MTEwOTQ3NDQyMTcxNjAyOTYwMA.Gzcr27.fQtgbSMQ65cM_C9pAyNUXOvo02JLr8SBxBjd1w"
 }
