--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-    "token": "MTEwOTQ3NDQyMTcxNjAyOTYwMA.Gzcr27.fQtgbSMQ65cM_C9pAyNUXOvo02JLr8SBxBjd1w"
+    "token": "MTEwOTQ3NDQyMTcxNjAyOTYwMA.GzFlCk.PqConRbTejtAFU7EyUzph5uMOEZ-LkuIVq6_3w"
 }
